--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -7,7 +7,38 @@
   text-align: center;
 }
 
+.card__side{
+  min-height: 300px;
+  min-width: 500px;
+  background-color: #F2F2F2;
+  border-radius: 25px;
+  padding: 10px;
+  border: 1px solid black;
+}
 
+.card__back {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card__back p {
+  margin: 0 0;
+  line-height: 20px;
+}
+
+.card__side button {
+  background-color: #F2F2F2;
+  border: 0;
+}
+
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+}
 
 html {
   background-color: #F2F2F2;
@@ -24,13 +55,26 @@ form {
   background-color: white;
 }
 
+.react-card-front {
+  position: relative !important
+}
+
 nav {
   padding: 0 5%;
 }
 
 .card {
   border: 2px solid #FF5C69;
-  padding: 40px;
+  padding: 40px 20px 40px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card img {
+  height: 100px;
+  width: 100px;
 }
 
 .btn {
@@ -96,6 +140,11 @@ form, .card {
   h1 {
     font-size: 50px;
     font-weight: 900;
+  }
+
+  .card__side{
+    min-width: 275px;   
+    max-width: 80vw;
   }
 
 }
