--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+.btn {
+    text-transform: lowercase;
+}
+
 .card__side{
   min-height: 300px;
   min-width: 500px;
@@ -104,6 +108,7 @@ nav {
 h1 {
   font-size: 100px;
   font-weight: 900;
+  margin-top: 10vh;
 }
 
 body {
@@ -143,7 +148,7 @@ form, .card {
   }
 
   .card__side{
-    min-width: 275px;   
+    min-width: 275px;
     max-width: 80vw;
   }
 
