--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -34,6 +34,8 @@
 .card__side button {
   background-color: #F2F2F2;
   border: 0;
+  color: rgba(0,0,0,0.87);
+  font-weight: normal;
 }
 
 .dashboard {
