move flip button to bottom right

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -15,6 +15,13 @@
   border: 1px solid black;
 }
 
+.flip-button {
+  bottom: 5px;
+  right: 11px;
+  position: absolute;
+
+}
+
 .card__side{
   min-height: 300px;
   min-width: 500px;
