--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -5,6 +5,7 @@
   align-items: center;
   align-content: center;
   text-align: center;
+  margin: 0 auto;
 }
 
 .btn {
@@ -23,6 +24,7 @@
 
 .barcode {
   border: 1px solid black;
+  background-color: white;
 }
 
 .flip-button {
@@ -44,6 +46,7 @@
   border-radius: 25px;
   padding: 10px;
   border: 1px solid black;
+  word-wrap: break-word;
 }
 
 .no-results {
@@ -83,6 +86,7 @@
   justify-content: space-around;
   align-items: center;
   align-content: center;
+  margin: 0 auto;
 }
 
 html {
@@ -115,6 +119,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 }
 
 .card img {
@@ -182,14 +187,14 @@ form, .card {
   color: black !important;
 }
 
-@media screen and (min-width: 521px) and (max-width: 750px) {
+@media screen and (min-width: 540px) and (max-width: 750px) {
   form, .card {
     min-width: 500px;
   }
 }
 
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 540px) {
 
   form, .card {
     min-width: 0px;
@@ -202,8 +207,31 @@ form, .card {
   }
 
   .card__side{
-    min-width: 275px;
+    min-width: 75vw;
     max-width: 80vw;
+    min-height: 350px;
+  }
+
+  .svg, .barcode {
+    transform: rotate(90deg);
+    /* top: 15px; */
+    position: relative;
+  }
+
+  .barcode {
+    display: flex;
+    flex-grow: 1;
+  }
+
+  .card__back {
+    display: block;
+  }
+
+  .pin {
+    right: 0px;
+    transform: rotate(90deg);
+    position: absolute;
+
   }
 
 }
