flip card horizontal when screen is small

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -198,7 +198,11 @@ form, .card {
 
   form, .card {
     min-width: 0px;
-    max-width: 85vw;
+    max-width: 99vw;
+  }
+
+  .card {
+    flex-basis: max-content;
   }
 
   h1 {
@@ -206,20 +210,50 @@ form, .card {
     font-weight: 900;
   }
 
-  .card__side{
-    min-width: 75vw;
-    max-width: 80vw;
-    min-height: 350px;
+  h2 {
+    font-size: 14vw;
+  }
+
+  h4 {
+    font-size: 6vw;
+  }
+  .card {
+    min-height: 600px;
+    justify-content: space-around;
+    /* flex: 0 0 auto; */
+  }
+
+  .react-card-front, .react-card-back, .react-card-flip, .react-card-flipper {
+    transform: rotate(90deg);
+
+  }
+
+  .react-card-flip {
+    transform: rotate(90deg);
+    top: 5px;
+  }
+
+  .card__side {
+    /* min-width: 5vw; */
+    min-width: 450px !important;
+    min-height: 250px !important;
+    max-height: 80vw;
+    /* min-height: 350px; */
+    /* transform: rotate(90deg); */
+    /* display: flex;
+    flex-direction: column; */
+    /* justify-content: space-around; */
+    /* flex: 0 0 auto; */
   }
 
   .svg, .barcode {
-    transform: rotate(90deg);
     /* top: 15px; */
-    position: relative;
+    /* position: relative; */
   }
-
+/*
   .barcode {
     display: flex;
+    flex-direction: column;
     flex-grow: 1;
   }
 
@@ -227,10 +261,15 @@ form, .card {
     display: block;
   }
 
+  .svg {
+    width: 100%;
+    height: 100%
+  } */
+
   .pin {
-    right: 0px;
-    transform: rotate(90deg);
-    position: absolute;
+    /* right: 0px; */
+    /* transform: rotate(90deg); */
+    /* position: absolute; */
 
   }
 
