--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -196,14 +196,21 @@ form, .card {
 
 @media screen and (max-width: 540px) {
 
-  form, .card {
-    min-width: 0px;
-    max-width: 99vw;
+  .card {
+    height: 99vh;
+    /* flex-direction: row; */
+    flex-shrink: 0;
   }
 
-  .card {
-    flex-basis: max-content;
+  .dashboard {
+    flex-direction: row;
   }
+
+  form {
+    max-width: 99vw;
+    min-width: 0px;
+  }
+
 
   h1 {
     font-size: 50px;
@@ -218,59 +225,29 @@ form, .card {
     font-size: 6vw;
   }
   .card {
-    min-height: 600px;
     justify-content: space-around;
-    /* flex: 0 0 auto; */
+    transform: rotate(90deg);
   }
 
-  .react-card-front, .react-card-back, .react-card-flip, .react-card-flipper {
-    transform: rotate(90deg);
 
+  .card__buttons {
+    flex-shrink: 2;
   }
 
   .react-card-flip {
-    transform: rotate(90deg);
-    top: 5px;
+    height: 95vw;
+    width: 80vh;
+    flex-shrink: 1;
   }
 
-  .card__side {
-    /* min-width: 5vw; */
-    min-width: 450px !important;
-    min-height: 250px !important;
-    max-height: 80vw;
-    /* min-height: 350px; */
-    /* transform: rotate(90deg); */
-    /* display: flex;
-    flex-direction: column; */
-    /* justify-content: space-around; */
-    /* flex: 0 0 auto; */
-  }
-
-  .svg, .barcode {
-    /* top: 15px; */
-    /* position: relative; */
-  }
-/*
-  .barcode {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-  }
-
-  .card__back {
-    display: block;
-  }
-
-  .svg {
-    width: 100%;
+  .react-card-flipper, .react-card-front, .react-card-back, .card__side {
     height: 100%
-  } */
+  }
 
-  .pin {
-    /* right: 0px; */
-    /* transform: rotate(90deg); */
-    /* position: absolute; */
-
+  .flip-button {
+    right: 2px;
+    bottom: 0px;
+    position: absolute;
   }
 
 }
