--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -22,6 +22,10 @@
   max-height: 50px;
 } */
 
+.alert {
+  text-align: center;
+}
+
 .barcode {
   border: 1px solid black;
   background-color: white;
