--- a/src/stylesheets/materialize.css
+++ b/src/stylesheets/materialize.css
@@ -3,6 +3,10 @@
  * Copyright 2014-2017 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+
+
+/* Note: I commented out line 5968 (text side for labels).  Otherwise, the file is unchanged */
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
@@ -5961,7 +5965,7 @@ button:focus {
 }
 
 label {
-  font-size: 0.8rem;
+  /* font-size: 0.8rem; */
   color: #9e9e9e;
 }
 
