optimize for mobile, including dashboard table and one card zoom

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -6,6 +6,10 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
   padding-bottom: 3%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  flex: 1 1 auto;
 }
 
 ::-webkit-scrollbar {
