--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -38,11 +38,18 @@ form {
   min-width: 700px;
 }
 
+h1, h2 {
+  font-weight: 700 !important;
+}
+
 
 h1 {
   font-size: 100px;
-  font-weight: 900;
   margin-top: 10vh;
+}
+
+h4 {
+  font-weight: 400;
 }
 
 .btn {
