--- a/src/stylesheets/mobile.css
+++ b/src/stylesheets/mobile.css
@@ -45,3 +45,15 @@
   }
 
 }
+
+@media screen and (max-width: 540px) {
+
+  .overview {
+    flex-direction: column;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+}
