--- a/src/stylesheets/navbar.css
+++ b/src/stylesheets/navbar.css
@@ -3,5 +3,13 @@ nav {
 }
 
 .alert {
-  text-align: center;
+  position: absolute;
+  left: 50%;
+  z-index: 1;
+  white-space: nowrap;
+}
+
+#alert {
+  position: relative;
+  left: -50%;
 }
